kubernetes/apps/forgejo/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames:
    - git.maxice8.com
  parentRefs:
    - name: public
      namespace: gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: forgejo
          port: 3000
