kubernetes/apps/forgejo/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forgejo-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: forgejo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - port: http
          protocol: TCP
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
        - ipBlock:
            cidr: ::/0
      ports:
        - port: ssh
          protocol: TCP
